[gd_scene load_steps=12 format=2]

[ext_resource path="res://objects/player_character_right_03.png" type="Texture" id=1]
[ext_resource path="res://objects/player_character_right_01.png" type="Texture" id=2]
[ext_resource path="res://objects/player_character_right_02.png" type="Texture" id=3]
[ext_resource path="res://objects/player/Player.gd" type="Script" id=4]
[ext_resource path="res://sound/oof_01.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/nom_01.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/die_01.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0
height = 5.99982

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 5 )
random_pitch = 1.3

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 6 )
random_pitch = 1.2

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 4 )
shrinkAmount = 0.002
deadFullness = 0.4

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 2
playing = true

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 3 )

[node name="EatSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 4 )

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 14.136
pitch_scale = 0.49
[connection signal="finished" from="DieSound" to="." method="_on_DieSound_finished"]
